# zephyr

./: west.yml
boards/ti/am13e230x_lp/: am13e230x_lp.dts  am13e230x_lp.yaml  am13e230x_lp_defconfig  am13e230x_lp_e1.overlay  am13e230x_lp_e1.yaml  am13e230x_lp_e2.overlay  am13e230x_lp_e2.yaml  board.cmake  board.yml  revision.cmake
boards/ti/am261x_lp/: am261x_lp_am2612_common.dtsi  am261x_lp_am2612_r5f0_0.dts  am261x_lp_am2612_r5f0_0.yaml  am261x_lp_am2612_r5f0_1.dts  am261x_lp_am2612_r5f0_1.yaml  am261x_lp_am2612_r5f0_1_defconfig  mpu_regions.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.ti_edma  dma_ti_edma.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.msp  gpio_msp.c
drivers/mbox/: CMakeLists.txt  Kconfig  mbox_ti_am26x.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.msp  pinctrl_msp.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.msp  Kconfig.ns16550  uart_msp.c  uart_ns16550.c
drivers/spi/: spi_omap_mcspi.c
dts/bindings/dma/: ti,edma.yaml
dts/bindings/gpio/: ti,msp-gpio.yaml
dts/bindings/mbox/: ti,am26x-mailbox.yaml
dts/bindings/pinctrl/: ti,msp-pinctrl.yaml
modules/: Kconfig  Kconfig.am13
samples/boards/ti/am261x_lp/sample_xip_app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  genimage_post_process.cmake  prj.conf  sysbuild.cmake
samples/boards/ti/am261x_lp/sample_xip_app/boards/: am261x_lp_am2612_r5f0_0.overlay
samples/boards/ti/am261x_lp/sample_xip_app/remote/: CMakeLists.txt
samples/boards/ti/am261x_lp/sample_xip_app/remote/src/: main.c
samples/boards/ti/am261x_lp/sample_xip_app/src/: main.c
(+63 files in other folders)
